Tue Jan  2 11:39:12 2002  Johnny Willemsen <jwillemsen@remedy.nl>

        * ace/OS.i:
          Added missing ACE_UNUSED_ARG in ACE_OS::event_timedwait

Tue Jan  1 15:36:39 2002  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_sunos5_sunc++.GNU: Added support
          for the buildbits=64 make option.

Tue Jan  1 20:05:12 2002  Johnny Willemsen <jwillemsen@remedy.nl>

        * ace/Name_Request_Reply.{h,cpp}:
          Changed type of 3 constructor arguments from size_t to ACE_UINT32
          because the members in which these arguments are stored are also
          of type ACE_UINT32

        * ace/OS.i
          In ACE_OS::umask method, changed the type in the ACE_OSCALL_RETURN
          macro from int to mode_t because that is the return type of the
          method

Tue Jan  1 08:47:25 2002  Douglas C. Schmidt  <schmidt@siesta.cs.wustl.edu>

	* ace/Thread.h: Clarify how the ACE_Thread_Adapter is deleted
	  when spawn() is called.  Thanks to Preston Elder
 	  <prez@srealm.net.au> for reporting this confusion.

Tue Jan  1 14:09:26 2002  Johnny Willemsen <jwillemsen@remedy.nl>

        * examples/Map_Manager/test_hash_map_manager.cpp:
          Made this example compiling when ACE_USES_WCHAR is set

        * Makefile.bor:
          Added examples directory because all examples for which there are
          BCB makefiles now build when ACE_USES_WCHAR is set

Tue Jan  1 00:02:12 2002  Nanbor Wang <nanbor@cs.wustl.edu>

        * ace/ace_dll.vcp: Added String_Base_Const.*.

Mon Dec 31 09:32:59 2001  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/Hash_Map_Manager_T.h: Added ACE_UNIMPLEMENTED_FUNC() for the
	  assignment operator and copy constructor of class
 	  ACE_Hash_Map_Manager_Ex.  Thanks to Johnny Willemsen for
 	  reporting this.

Mon Dec 31 16:33:17 2001  Johnny Willemsen <jwillemsen@remedy.nl>

        * ace/OS.{h,i}:
          Added ACE_OS::freopen. This method reassigns an existing