@@ -1,3 +1,9 @@
+Wed Jan  2 07:37:01 2002  Balachandran Natarajan  <bala@cs.wustl.edu>
+
+	* ace/Handle_Set.h: 
+	* ace/Handle_Set.cpp: Added a method reset_state () to the
+	  ACE_Handle_Set_Iterator class. 
+
 Tue Jan  2 11:39:12 2002  Johnny Willemsen <jwillemsen@remedy.nl>
 
         * ace/OS.i:
